# leif

./: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  init.sh  start.sh
.github/workflows/: python-package.yml
app/: api.py  main.py  shared_state.py
app/api/: Depends.py  deps.py  index.py  llm.py  test_documents.py  utils.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: collection.py  document.py  search.py
app/api/classes/: collection.py  document.py
app/core/: config.py
app/schemas/: __init__.py  collection.py  document.py  search.py
devcontainer/: devcontainer.json
docker/: docker-local-redis.yml
docker/redis-vector-db/: redis.conf
notebook/: different_stuff.ipynb  search_lablab.ipynb
secrets/: MY_API_KEY
tests/: test_api.py  test_config.py  test_dep.py  test_documents.json
tests/unit/: test_document.py
