[tool.poetry]
name = "app"
version = "0.0.1"
description = "leif api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
numpy = "^1.24.3"
lxml = "^4.9.2"
redis = "^4.5.5"
pyquery = "^2.0.0"
cohere = "^4.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.3"
mypy = "^1.2.0"
httpx = "^0.24.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
